--- a/src/Gulla.Episerver.Labs.LanguageManager.OpenAi.csproj
+++ b/src/Gulla.Episerver.Labs.LanguageManager.OpenAi.csproj
@@ -10,17 +10,17 @@
     <Title>Gulla.Episerver.Labs.LanguageManager.OpenAi</Title>
     <PackageId>Gulla.Episerver.Labs.LanguageManager.OpenAi</PackageId>
     <Authors>Tomas Hensrud Gulla</Authors>
-    <Version>1.0.1</Version>
-    <PackageVersion>1.0.1</PackageVersion>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.2</Version>
+    <PackageVersion>1.0.2</PackageVersion>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <FileVersion>1.0.2.0</FileVersion>
     <Description>An addon for EPiServer.Labs.LanguageManager that enables translation using OpenAI.</Description>
-    <PackageTags>Optimizely LanguageManager AI Translation OpenAI</PackageTags>
+    <PackageTags>Optimizely LanguageManager AI Translation OpenAI Translator</PackageTags>
     <PackageProjectUrl>https://github.com/tomahg/Gulla.Episerver.Labs.LanguageManager.OpenAi/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/tomahg/Gulla.Episerver.Labs.LanguageManager.OpenAi/</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Fix problem with httpclient</PackageReleaseNotes>
+    <PackageReleaseNotes>Use gpt-4o as default model when translating</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
